# Volant-GT

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  layout_config.json  main.py  screens.py  ui_components.py
server/: __init__.py  core.py  main-server.py  ui_components.py
